letras color blanco e imagenes

--- a/pagina4.html
+++ b/pagina4.html
@@ -40,10 +40,14 @@
 
             <h4 class="titulo-cuarto">ESTETICAS FAVORITAS </h4>
             <ul>
-                <li class="banda-fav"></li>
-                <img src="iron-maide" alt="java script" width="200">
+                <li class="aesthetic">Fairy core</li>
+                <img src="fairy.jpeg" alt="java script" width="200">
             </ul>
             
+            <ul>
+                <li class="aesthetic">forest core (amo la naturaleza)</li>
+                <img src="fairy.jpeg" alt="java script" width="200">
+            </ul>
 
         </main>
     </body>
