termine pagina 4 y cree el js para la pagina 5

--- a/pagina4.html
+++ b/pagina4.html
@@ -51,7 +51,7 @@
                 <img src="forest.jpeg" alt="java script" width="200">
             </ul>
 
-            <h5 class="texto-quinto">Me gustan bastante los arg, aqui te comparto un link donde podras probarlo, este se llama welcome home: <a href="https://www.clownillustration.com/whats-welcome-home" target="_blank"> WELCOME HOME </a> </h5>
+            <h5 class="texto-quinto">Me gustan bastante los ARG, aqui te comparto<img class="welcomeh" src="welcome.jpeg" alt="java script" width="100"> un link donde podras probarlo, este se llama Welcome Home: <a href="https://www.clownillustration.com/whats-welcome-home" target="_blank"> WELCOME HOME </a> </h5> 
             
             
 
