--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="./pagina2.html">Datos Biograficos</a></li>
         <li><a href="./pagina3.html">Hoja de vida</a></li>
         <li><a href="./pagina4.html">Hobbies</a></li>
+        <li><a href="./pagina5.html">Inscribete</a></li>
       </ul>
     </nav>
   </header>
