--- a/pagina4.html
+++ b/pagina4.html
@@ -8,7 +8,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hobbies</title>
 </head>
-
     <body>
         <header>
         <nav>
@@ -17,6 +16,7 @@
             <li><a href="./pagina2.html">Datos Biograficos</a></li>
             <li><a href="./pagina3.html">Hoja de vida</a></li>
             <li><a href="./pagina4.html">Hobbies</a></li>
+            <li><a href="./pagina5.html">Inscribete</a></li>
         </ul>
         </nav>
         </header>
