ya tiene el formulario

--- a/pagina5.html
+++ b/pagina5.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inscribete<title>
+  <title>Inscribete</title>
 </head>
     <body>
         <header>
@@ -21,9 +21,30 @@
         </nav>
         </header>
 
+        <main>
+            <h1>TE INVITO A SUBSCRIBIRTE A MI PAGINA WEB!</h1>
+
+            <form action="" name="formulario">
+                <label for="Username">Username:</label>
+                <input type="text" id="user" name="user" required></input>
+                <br>
+
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="name" name="name" required></input>
+                <br>
+
+                <label for="imagen">Imagen(URL)</label>
+                <input type="text" id="imagen" name="imagen" required></input>
+                <br>
+                
+                <label for="mascota">Mascota</label>
+                <input type="text" id="name" name="name" required></input>
+                <br>
+
+                <input type="submit" id="btn" name="btn" value="Enviar"> </input>
+            </form>
+        </main>
+
     <script src="pagina5.js"></script>
-
-    <h1>TE INVITO A SUBSCRIBIRTE A MI PAGINA WEB!</h1>
-
     </body>
 </html>
