medio funciona el de la tabla

--- a/pagina5.html
+++ b/pagina5.html
@@ -25,7 +25,7 @@
             <h1>TE INVITO A SUBSCRIBIRTE A MI PAGINA WEB!</h1>
 
             <form action="" name="formulario">
-                
+
                 <label for="Username">Username:</label>
                 <input type="text" id="user" name="user" required></input>
                 <br>
@@ -60,6 +60,9 @@
 
                 </tbody>
             </table>
+            
+
+            <button id="agregarFila">Agregar Fila</button> 
 
             <h3>MASCOTAS</h3>
             <ul id="lista">
