tengo algo util

--- a/pagina5.html
+++ b/pagina5.html
@@ -39,7 +39,7 @@
                 <br>
                 
                 <label for="mascota">Mascota</label>
-                <input type="text" id="name" name="name" required></input>
+                <input type="text" id="mascota" name="mascota" required></input>
                 <br>
 
                 <input type="submit" id="btn" name="btn" value="Enviar"> </input>
