cambie colores letra a lis 2 numerada

--- a/pagina3.html
+++ b/pagina3.html
@@ -68,12 +68,12 @@
 
                   <section id="seccion4" class="seccion">
                     <h2>Produccion intelectual</h2>
-                    <ol>
-                        <li>Aplicación web de deporte (Parchados)</li>
-                        <li>Simuladores de aplicacion movil para una aplicacion ambiental</li>
-                        <li>Marketin digital para aplicación web de bienes y raices (CASETA)</li>
-                        <li> Realicé un curso de Cisco NetAcad</li>
-                      </ol>
+                    <ol class="lista-numerada">
+                      <li><span class="viñeta-color">Aplicación web de deporte (Parchados)</span></li>
+                      <li><span class="viñeta-color">Simuladores de aplicación móvil para una aplicación ambiental</span></li>
+                      <li><span class="viñeta-color">Marketing digital para aplicación web de bienes y raíces (CASETA)</span></li>
+                      <li><span class="viñeta-color">Realicé un curso de Cisco NetAcad</span></li>
+                    </ol>
                   </section>
             
             </section>
