lo mismo pero ya corregido

--- a/pagina3.html
+++ b/pagina3.html
@@ -68,7 +68,7 @@
 
                   <section id="seccion4" class="seccion">
                     <h2>Produccion intelectual</h2>
-                    <ol class="lista-numerada">
+                    <ol class="lista-numerada-dos">
                       <li><span class="viñeta-color">Aplicación web de deporte (Parchados)</span></li>
                       <li><span class="viñeta-color">Simuladores de aplicación móvil para una aplicación ambiental</span></li>
                       <li><span class="viñeta-color">Marketing digital para aplicación web de bienes y raíces (CASETA)</span></li>
