degradado y cambio de colores

--- a/pagina3.html
+++ b/pagina3.html
@@ -39,34 +39,34 @@
                   </ul>
 
 
-                  <section id="seccion1" class="seccion"> 
+                  <section id="seccion1" class="seccion-cero"> 
                     <img class="imagen-caseta" src="pagina-caseta.PNG" alt="java script" width="400">
 
                     <h2>Experiencia laboral</h2>
-                    <ul class="lista no enumerada">
-                        <li>Anuncios publicitarios en una empresa de tecnoliga como voz en off</li> 
-                        <li>Marketing digital en distintas aplicaciones web </li>
-                        <li> Bases de datos para una empresa ambiental (ACM)</li>
+                    <ul class="lista-no-enumerada-uno">
+                      <li><span class="viñeta-color">Anuncios publicitarios en una empresa de tecnología como voz en off</span></li>
+                      <li><span class="viñeta-color">Marketing digital en distintas aplicaciones web</span></li>
+                      <li><span class="viñeta-color">Bases de datos para una empresa ambiental (ACM)</span></li>
                     </ul>
                   </section>
                 
-                  <section id="seccion2" class="seccion">
+                  <section id="seccion2" class="seccion-uno">
                     <h2>Estudios</h2>
-                    <ol>
-                        <li>Colegio el carmelo-Bogota</li>
-                        <li>Estudiande de ingeniera de sistemas universidad javeriana</li>
-                      </ol>
+                    <ol class="lista-numerada-uno">
+                      <li><span class="viñeta-color">Colegio el Carmelo-Bogotá</span></li>
+                      <li><span class="viñeta-color">Estudiante de ingeniería de sistemas en la Universidad Javeriana</span></li>
+                    </ol>
                   </section>
                 
-                  <section id="seccion3" class="seccion">
+                  <section id="seccion3" class="seccion-dos">
                     <h2>Premios</h2>        
-                    <ul class="lista no enumerada">
-                        <li>Reconocimiento de olimpiadas matematicas</li> 
-                        <li>Certificados de honor por excelencia academica </li>
+                    <ul class="lista-no-enumerada-dos">
+                      <li><span class="viñeta-color">Reconocimiento de olimpiadas matemáticas</span></li>
+                      <li><span class="viñeta-color">Certificados de honor por excelencia académica</span></li>
                     </ul>
                   </section>
 
-                  <section id="seccion4" class="seccion">
+                  <section id="seccion4" class="seccion-tres">
                     <h2>Produccion intelectual</h2>
                     <ol class="lista-numerada-dos">
                       <li><span class="viñeta-color">Aplicación web de deporte (Parchados)</span></li>
