subrayado azul en todas las paginas, listo

--- a/pagina5.html
+++ b/pagina5.html
@@ -22,7 +22,7 @@
         </header>
 
         <main>
-            <h1>TE INVITO A SUBSCRIBIRTE A MI PAGINA WEB!</h1>
+            <h1 class="titulo-principal">TE INVITO A SUBSCRIBIRTE A MI PAGINA WEB!</h1>
 
             <form action="" name="formulario">
 
@@ -45,7 +45,7 @@
                 <input type="submit" id="btn" name="btn" value="Enviar"> </input>
             </form>
 
-            <h2>AMIGOS: </h2>
+            <h2 class="titulo-dos">AMIGOS: </h2>
             <table>
                 <thead>
                     <tr>
@@ -62,7 +62,7 @@
             </table>
             
 
-            <h3>MASCOTAS</h3>
+            <h3 class="titulo-tres">MASCOTAS</h3>
             <ul id="lista">
                 
             </ul>
