cambie letra en la pagina2

--- a/pagina2.html
+++ b/pagina2.html
@@ -12,17 +12,18 @@
     <header>
         <nav>
           <ul>
-            <li><a href="./index.html">Bienvenido</a></li>
+            <li><a href="./index.html">Bienvenid@</a></li>
             <li><a href="./pagina2.html">Datos Biograficos</a></li>
             <li><a href="./pagina3.html">Hoja de vida</a></li>
-            <li><a href="./pagina5.html">Hobbies</a></li>
+            <li><a href="./pagina4.html">Hobbies</a></li>
+            <li><a href="./pagina5.html">Inscribete</a></li>
           </ul>
         </nav>
       </header>
     
     <main>
         <h1 class="titulo-principal">"AUTO BIOGRAFIA"</h1>
-    <h2> Bienvenido a mis datos biograficos!</h2>
+    <h2 class="titulo-secundario"> Bienvenido a mis datos biograficos!</h2>
     <h3> Mis comienzos</h3>
 
     <table>
