agregue tipografia a la pagina 5

--- a/pagina5.html
+++ b/pagina5.html
@@ -68,7 +68,10 @@
             </ul>
         </main>
 
-
+        <footer>
+            <p>Puedes contactarme al: +57 3116566558</p>
+        </footer>
+        
     <script src="pagina5.js"></script>
     </body>
 </html>
